nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "nextcloud"
  name: "nextcloud-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m"
spec:
  tls:
  - hosts:
    - changeme
    secretName: "nextcloud-prod-tls"
  rules:
  - host: changeme
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "nextcloud"
              port: 
                number: 8080
